force-app/main/default/objects/Apttus__RetentionPolicy__c/Apttus__RetentionPolicy__c.object-meta.xml
<CustomObject>
    <description>Holds object retention policies</description>
    <label>Retention Policy</label>
    <nameField>
        <label>Policy  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retention Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>