force-app/main/default/objects/Apttus__RetentionPolicy__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether the policy is active. Inactive policies are ignored.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>