force-app/main/default/objects/Apttus__RetentionPolicy__c/fields/Apttus__EditSpec__c.field-meta.xml
<CustomField>
    <fullName>Apttus__EditSpec__c</fullName>
    <description>&quot;Edit Spec&quot; custom button</description>
    <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__RetentionPolicyEdit?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_EditSpec&quot;, &quot;Edit Spec&quot;),&quot;_self&quot;), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edit Spec</label>
    <type>Text</type>
</CustomField>