force-app/main/default/objects/Apttus__RetentionPolicy__c/fields/Apttus__PolicySpec__c.field-meta.xml
<CustomField>
    <fullName>Apttus__PolicySpec__c</fullName>
    <description>The policy specification</description>
    <label>Policy Spec</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>