force-app/main/default/objects/Apttus__RetentionPolicy__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__Sequence__c</columns>
    <columns>Apttus__BusinessObject__c</columns>
    <columns>Apttus__Description__c</columns>
    <columns>Apttus__Active__c</columns>
    <columns>Apttus__PolicySpec__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>