force-app/main/default/objects/Apttus__RetentionPolicy__c/listViews/Apttus__All1.listView-meta.xml
<ListView>
    <fullName>Apttus__All1</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>